# cmake_sample_projects

./: .gitignore  notes.md
Project_01/: CMakeLists.txt  main_01.cpp
Project_02/: CMakeLists.txt  main_02.cpp
Project_03/: CMakeLists.txt
Project_03/app/: CMakeLists.txt  main_03.cpp
Project_04/: CMakeLists.txt
Project_04/app/: CMakeLists.txt  main_04.cpp
Project_05/: CMakelists.txt
